--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
 
     <string name="language">en</string>
 
-    <string name="wind_speed" formatted="false">%d km/h</string>
+    <string name="wind_speed_metric" formatted="false">%d m/s</string>
+    <string name="wind_speed_imperial" formatted="false">%d mi/h</string>
     <string name="unknown_wind_speed">&#8230; km/h</string>
 
     <string name="wind_directon_label">Direction:</string>
@@ -43,6 +44,25 @@
     <string name="menu_current_weather">Current Weather</string>
     <string name="menu_weather_forecast">Weather Forecast</string>
     <string name="menu_settings">Settings</string>
+
+    <string name="settings_temperature_unit_label">Temperature unit</string>
+    <string name="settings_wind_speed_label">Wind Speed unit</string>
+
+    <string name="settings_temperature_celsius">Celsius</string>
+    <string name="settings_temperature_fahrenheit">Fahrenheit</string>
+
+    <string name="settings_wind_speed_m">m/s</string>
+    <string name="settings_wind_speed_mi">mi/h</string>
+
+    <string-array name="settings_temperature_units">
+        <item>@string/settings_temperature_celsius</item>
+        <item>@string/settings_temperature_fahrenheit</item>
+    </string-array>
+
+    <string-array name="settings_wind_speed_unit">
+        <item>@string/settings_wind_speed_m</item>
+        <item>@string/settings_wind_speed_mi</item>
+    </string-array>
 
     <string name="north_abbr">N</string>
     <string name="west_abbr">W</string>
