Improve navigation within the application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,33 @@
         <item>@string/settings_wind_speed_mi</item>
     </string-array>
 
+    <!-- {wd} for week-days full letters, {mn} for month name full letters -->
+    <string name="date_format_forecast">{wd}, {mn} d, yyyy</string>
+    <string name="forecast_time_format">hh a</string>
+    <string-array name="week_days">
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+        <item>Saturday</item>
+        <item>Sunday</item>
+    </string-array>
+    <string-array name="months">
+        <item>January</item>
+        <item>February</item>
+        <item>March</item>
+        <item>April</item>
+        <item>May</item>
+        <item>June</item>
+        <item>July</item>
+        <item>August</item>
+        <item>September</item>
+        <item>October</item>
+        <item>November</item>
+        <item>December</item>
+    </string-array>
+
     <string name="north_abbr">N</string>
     <string name="west_abbr">W</string>
     <string name="south_abbr">S</string>
